--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,15 @@
 <html>
 <head>
   <title>CSS Example</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<h1>omers CSS first lab</h1>
+
+	<p> how much days ea have in 1 year? </p>
+	<br>
+	<p>365 days</p>
+
+	<a href="https://docs.google.com/presentation/d/1MgFk5UM_wokJ5KM7UJbM_uqB7mJCz4xWqqFV4-xHLRQ/edit#slide=id.g3d88f32c15_0_211"> ower lecture fore today</a>
 </body>
 </html>
