--- a/hello.html
+++ b/hello.html
@@ -5,12 +5,23 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>omers CSS first lab</h1>
+	<div class="title" style="width: 40%"><h1>omers CSS first lab</h1></div>
 
-	<p> how much days ea have in 1 year? </p>
-	<br>
-	<p>365 days</p>
+	<div class="content" style="width: 50%" >
 
-	<a href="https://docs.google.com/presentation/d/1MgFk5UM_wokJ5KM7UJbM_uqB7mJCz4xWqqFV4-xHLRQ/edit#slide=id.g3d88f32c15_0_211"> ower lecture fore today</a>
+	<ul>
+		
+		<li class="veg">pizza</li>
+		<li id="Hamborger">Hamborger </li>
+		<li class="veg">Salmon fish</li>
+		<li class="veg">Banana</li>
+		<li> pasta Bolonez</li>
+		<li class="veg">Sushi</li>
+
+	</ul>
+	</div>
+
+
+	<a href="https://docs.google.com/presentation/d/1MgFk5UM_wokJ5KM7UJbM_uqB7mJCz4xWqqFV4-xHLRQ/edit#slide=id.g3d88f32c15_0_211" > ower lecture fore today</a>
 </body>
 </html>
